fix compiler error for java version